exports[`no-sleep-in-test > invalid(1): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(1): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(10): import test from 'node:test';\ntest.beforeEach(async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test.beforeEach(async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(10): import test from 'node:test';\ntest.beforeEach(async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test.beforeEach(async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(11): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.beforeEach(async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.beforeEach(async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(11): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.beforeEach(async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.beforeEach(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(12): import * as nodeTest from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nnodeTest.beforeEach(async () => {\n\tawait delay(500);\n}, {timeout: 1000}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | nodeTest.beforeEach(async () => {
  4 | 	await delay(500);
  5 | }, {timeout: 1000});

`;

exports[`no-sleep-in-test > invalid(12): import * as nodeTest from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nnodeTest.beforeEach(async () => {\n\tawait delay(500);\n}, {timeout: 1000}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | nodeTest.beforeEach(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | }, {timeout: 1000});

`;

exports[`no-sleep-in-test > invalid(13): import * as nodeTest from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nnodeTest.test.beforeEach(async () => {\n\tawait delay(500);\n}, {timeout: 1000}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | nodeTest.test.beforeEach(async () => {
  4 | 	await delay(500);
  5 | }, {timeout: 1000});

`;

exports[`no-sleep-in-test > invalid(13): import * as nodeTest from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nnodeTest.test.beforeEach(async () => {\n\tawait delay(500);\n}, {timeout: 1000}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | nodeTest.test.beforeEach(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | }, {timeout: 1000});

`;

exports[`no-sleep-in-test > invalid(14): import {beforeEach} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nbeforeEach(async () => {\n\tawait delay(500);\n}, {skip: true}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | beforeEach(async () => {
  4 | 	await delay(500);
  5 | }, {skip: true});

`;

exports[`no-sleep-in-test > invalid(14): import {beforeEach} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nbeforeEach(async () => {\n\tawait delay(500);\n}, {skip: true}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | beforeEach(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | }, {skip: true});

`;

exports[`no-sleep-in-test > invalid(15): import {test} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.beforeEach(async () => {\n\tawait delay(500);\n}, {skip: true}); 1`] = `

  1 | import {test} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.beforeEach(async () => {
  4 | 	await delay(500);
  5 | }, {skip: true});

`;

exports[`no-sleep-in-test > invalid(15): import {test} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.beforeEach(async () => {\n\tawait delay(500);\n}, {skip: true}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.beforeEach(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | }, {skip: true});

`;

exports[`no-sleep-in-test > invalid(16): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.beforeEach(async () => {\n\tawait delay(500);\n}, {skip: true}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.beforeEach(async () => {
  4 | 	await delay(500);
  5 | }, {skip: true});

`;

exports[`no-sleep-in-test > invalid(16): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.beforeEach(async () => {\n\tawait delay(500);\n}, {skip: true}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.beforeEach(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | }, {skip: true});

`;

exports[`no-sleep-in-test > invalid(17): import test from 'node:test';\ntest('waits', async t => {\n\tawait t.test('child', async () => {\n\t\tawait new Promise(resolve => setTimeout(resolve, 500));\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await t.test('child', async () => {
  4 | 		await new Promise(resolve => setTimeout(resolve, 500));
  5 | 	});
  6 | });

`;

exports[`no-sleep-in-test > invalid(17): import test from 'node:test';\ntest('waits', async t => {\n\tawait t.test('child', async () => {\n\t\tawait new Promise(resolve => setTimeout(resolve, 500));\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await t.test('child', async () => {
> 4 | 		await new Promise(resolve => setTimeout(resolve, 500));
    | 		      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | 	});
  6 | });

`;

exports[`no-sleep-in-test > invalid(18): import test from 'node:test';\ntest('waits', async context => {\n\tawait context.test('child', async () => {\n\t\tawait new Promise(resolve => setTimeout(resolve, 500));\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async context => {
  3 | 	await context.test('child', async () => {
  4 | 		await new Promise(resolve => setTimeout(resolve, 500));
  5 | 	});
  6 | });

`;

exports[`no-sleep-in-test > invalid(18): import test from 'node:test';\ntest('waits', async context => {\n\tawait context.test('child', async () => {\n\t\tawait new Promise(resolve => setTimeout(resolve, 500));\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async context => {
  3 | 	await context.test('child', async () => {
> 4 | 		await new Promise(resolve => setTimeout(resolve, 500));
    | 		      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | 	});
  6 | });

`;

exports[`no-sleep-in-test > invalid(19): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\t\tsetTimeout(resolve, 500);\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => {
  4 | 		setTimeout(resolve, 500);
  5 | 	});
  6 | });

`;

exports[`no-sleep-in-test > invalid(19): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\t\tsetTimeout(resolve, 500);\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		setTimeout(resolve, 500);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 	});
    | ^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });

`;

exports[`no-sleep-in-test > invalid(2): import test from 'node:test';\ntest('waits', {timeout: 1000}, async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', {timeout: 1000}, async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(2): import test from 'node:test';\ntest('waits', {timeout: 1000}, async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', {timeout: 1000}, async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(20): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\t\treturn setTimeout(resolve, 500);\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => {
  4 | 		return setTimeout(resolve, 500);
  5 | 	});
  6 | });

`;

exports[`no-sleep-in-test > invalid(20): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\t\treturn setTimeout(resolve, 500);\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		return setTimeout(resolve, 500);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 	});
    | ^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });

`;

exports[`no-sleep-in-test > invalid(21): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(done => setTimeout(done, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(done => setTimeout(done, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(21): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(done => setTimeout(done, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(done => setTimeout(done, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(22): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise((resolve, reject) => setTimeout(reject, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise((resolve, reject) => setTimeout(reject, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(22): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise((resolve, reject) => setTimeout(reject, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise((resolve, reject) => setTimeout(reject, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(23): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(resolve));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(resolve));
  4 | });

`;

exports[`no-sleep-in-test > invalid(23): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(resolve));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(resolve));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(24): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\t\tconst timeout = setTimeout(resolve, 500);\n\t\treturn timeout;\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => {
  4 | 		const timeout = setTimeout(resolve, 500);
  5 | 		return timeout;
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(24): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => {\n\t\tconst timeout = setTimeout(resolve, 500);\n\t\treturn timeout;\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		const timeout = setTimeout(resolve, 500);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 		return timeout;
    | ^^^^^^^^^^^^^^^^^
> 6 | 	});
    | ^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  7 | });

`;

exports[`no-sleep-in-test > invalid(25): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => resolve(), 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(() => resolve(), 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(25): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => resolve(), 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(() => resolve(), 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(26): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => resolve()));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(() => resolve()));
  4 | });

`;

exports[`no-sleep-in-test > invalid(26): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => resolve()));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(() => resolve()));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(27): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => {\n\t\treturn resolve();\n\t}, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(() => {
  4 | 		return resolve();
  5 | 	}, 500));
  6 | });

`;

exports[`no-sleep-in-test > invalid(27): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(() => {\n\t\treturn resolve();\n\t}, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(() => {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		return resolve();
    | ^^^^^^^^^^^^^^^^^^^
> 5 | 	}, 500));
    | ^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });

`;

exports[`no-sleep-in-test > invalid(28): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(function () {\n\t\tresolve();\n\t}, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => setTimeout(function () {
  4 | 		resolve();
  5 | 	}, 500));
  6 | });

`;

exports[`no-sleep-in-test > invalid(28): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => setTimeout(function () {\n\t\tresolve();\n\t}, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => setTimeout(function () {
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		resolve();
    | ^^^^^^^^^^^^
> 5 | 	}, 500));
    | ^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | });

`;

exports[`no-sleep-in-test > invalid(29): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => globalThis.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => globalThis.setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(29): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => globalThis.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => globalThis.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(3): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', {skip: undefined}, async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', {skip: undefined}, async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(3): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', {skip: undefined}, async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', {skip: undefined}, async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(30): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => global.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async t => {
  3 | 	await new Promise(resolve => global.setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(30): import test from 'node:test';\ntest('waits', async t => {\n\tawait new Promise(resolve => global.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async t => {
> 3 | 	await new Promise(resolve => global.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(31): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => delay(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => delay(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(31): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => delay(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => delay(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(32): import test from 'node:test';\nimport {setTimeout as delay} from 'timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => delay(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => delay(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(32): import test from 'node:test';\nimport {setTimeout as delay} from 'timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => delay(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => delay(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(33): import test from 'node:test';\nimport * as timers from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as timers from 'node:timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(33): import test from 'node:test';\nimport * as timers from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as timers from 'node:timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(34): import test from 'node:test';\nimport * as timers from 'timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as timers from 'timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(34): import test from 'node:test';\nimport * as timers from 'timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as timers from 'timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(35): import test from 'node:test';\nimport timers from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import timers from 'node:timers';
  3 | test('waits', async () => {
  4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
  5 | });

`;

exports[`no-sleep-in-test > invalid(35): import test from 'node:test';\nimport timers from 'node:timers';\ntest('waits', async () => {\n\tawait new Promise(resolve => timers.setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import timers from 'node:timers';
  3 | test('waits', async () => {
> 4 | 	await new Promise(resolve => timers.setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(36): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(36): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(37): import test from 'node:test';\nimport {setTimeout as delay} from 'timers/promises';\ntest('waits', async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'timers/promises';
  3 | test('waits', async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(37): import test from 'node:test';\nimport {setTimeout as delay} from 'timers/promises';\ntest('waits', async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'timers/promises';
  3 | test('waits', async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(38): import test from 'node:test';\nimport * as timers from 'node:timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as timers from 'node:timers/promises';
  3 | test('waits', async () => {
  4 | 	await timers.setTimeout(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(38): import test from 'node:test';\nimport * as timers from 'node:timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as timers from 'node:timers/promises';
  3 | test('waits', async () => {
> 4 | 	await timers.setTimeout(500);
    | 	      ^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(39): import test from 'node:test';\nimport * as timers from 'timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import * as timers from 'timers/promises';
  3 | test('waits', async () => {
  4 | 	await timers.setTimeout(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(39): import test from 'node:test';\nimport * as timers from 'timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import * as timers from 'timers/promises';
  3 | test('waits', async () => {
> 4 | 	await timers.setTimeout(500);
    | 	      ^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(4): import test from 'node:test';\ntest.only('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test.only('waits', async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(4): import test from 'node:test';\ntest.only('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test.only('waits', async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(40): import test from 'node:test';\nimport timers from 'node:timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import timers from 'node:timers/promises';
  3 | test('waits', async () => {
  4 | 	await timers.setTimeout(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(40): import test from 'node:test';\nimport timers from 'node:timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import timers from 'node:timers/promises';
  3 | test('waits', async () => {
> 4 | 	await timers.setTimeout(500);
    | 	      ^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(41): import test from 'node:test';\nimport timers from 'timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import timers from 'timers/promises';
  3 | test('waits', async () => {
  4 | 	await timers.setTimeout(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(41): import test from 'node:test';\nimport timers from 'timers/promises';\ntest('waits', async () => {\n\tawait timers.setTimeout(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import timers from 'timers/promises';
  3 | test('waits', async () => {
> 4 | 	await timers.setTimeout(500);
    | 	      ^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(42): import {before} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nbefore(async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import {before} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | before(async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(42): import {before} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nbefore(async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import {before} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | before(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(43): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.todo('waits', async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.todo('waits', async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(43): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest.todo('waits', async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test.todo('waits', async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(44): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', {todo: 'later'}, async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', {todo: 'later'}, async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(44): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', {todo: 'later'}, async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', {todo: 'later'}, async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(45): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test('child', async () => {\n\t\tawait delay(500);\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test('child', async () => {
  5 | 		await delay(500);
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(45): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test('child', async () => {\n\t\tawait delay(500);\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test('child', async () => {
> 5 | 		await delay(500);
    | 		      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(46): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test.todo('child', async () => {\n\t\tawait delay(500);\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test.todo('child', async () => {
  5 | 		await delay(500);
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(46): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test.todo('child', async () => {\n\t\tawait delay(500);\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test.todo('child', async () => {
> 5 | 		await delay(500);
    | 		      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(47): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tt.beforeEach(async () => {\n\t\tawait delay(500);\n\t}, {timeout: 1000});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	t.beforeEach(async () => {
  5 | 		await delay(500);
  6 | 	}, {timeout: 1000});
  7 | });

`;

exports[`no-sleep-in-test > invalid(47): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tt.beforeEach(async () => {\n\t\tawait delay(500);\n\t}, {timeout: 1000});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	t.beforeEach(async () => {
> 5 | 		await delay(500);
    | 		      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | 	}, {timeout: 1000});
  7 | });

`;

exports[`no-sleep-in-test > invalid(48): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tt.beforeEach(async () => {\n\t\tawait delay(500);\n\t}, {skip: true});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	t.beforeEach(async () => {
  5 | 		await delay(500);
  6 | 	}, {skip: true});
  7 | });

`;

exports[`no-sleep-in-test > invalid(48): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tt.beforeEach(async () => {\n\t\tawait delay(500);\n\t}, {skip: true});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	t.beforeEach(async () => {
> 5 | 		await delay(500);
    | 		      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | 	}, {skip: true});
  7 | });

`;

exports[`no-sleep-in-test > invalid(49): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tt.afterEach(async () => {\n\t\tawait delay(500);\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	t.afterEach(async () => {
  5 | 		await delay(500);
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(49): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tt.afterEach(async () => {\n\t\tawait delay(500);\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	t.afterEach(async () => {
> 5 | 		await delay(500);
    | 		      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(5): import {it} from 'node:test';\nit('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import {it} from 'node:test';
  2 | it('waits', async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(5): import {it} from 'node:test';\nit('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import {it} from 'node:test';
  2 | it('waits', async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(50): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test('child', async subtest => {\n\t\tsubtest.beforeEach(async () => {\n\t\t\tawait delay(500);\n\t\t});\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test('child', async subtest => {
  5 | 		subtest.beforeEach(async () => {
  6 | 			await delay(500);
  7 | 		});
  8 | 	});
  9 | });

`;

exports[`no-sleep-in-test > invalid(50): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\tawait t.test('child', async subtest => {\n\t\tsubtest.beforeEach(async () => {\n\t\t\tawait delay(500);\n\t\t});\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	await t.test('child', async subtest => {
  5 | 		subtest.beforeEach(async () => {
> 6 | 			await delay(500);
    | 			      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  7 | 		});
  8 | 	});
  9 | });

`;

exports[`no-sleep-in-test > invalid(51): import {describe, test} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ndescribe('suite', () => {\n\ttest('waits', async () => {\n\t\tawait delay(500);\n\t});\n}); 1`] = `

  1 | import {describe, test} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | describe('suite', () => {
  4 | 	test('waits', async () => {
  5 | 		await delay(500);
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(51): import {describe, test} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ndescribe('suite', () => {\n\ttest('waits', async () => {\n\t\tawait delay(500);\n\t});\n}); 2`] = `

Message:
  1 | import {describe, test} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | describe('suite', () => {
  4 | 	test('waits', async () => {
> 5 | 		await delay(500);
    | 		      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(52): import {describe, test} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ndescribe('suite', {skip: false}, () => {\n\ttest('waits', async () => {\n\t\tawait delay(500);\n\t});\n}); 1`] = `

  1 | import {describe, test} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | describe('suite', {skip: false}, () => {
  4 | 	test('waits', async () => {
  5 | 		await delay(500);
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(52): import {describe, test} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ndescribe('suite', {skip: false}, () => {\n\ttest('waits', async () => {\n\t\tawait delay(500);\n\t});\n}); 2`] = `

Message:
  1 | import {describe, test} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | describe('suite', {skip: false}, () => {
  4 | 	test('waits', async () => {
> 5 | 		await delay(500);
    | 		      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(53): import test from 'node:test';\ntest('waits', async () => {\n\tawait new Promise<void>(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('waits', async () => {
  3 | 	await new Promise<void>(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(53): import test from 'node:test';\ntest('waits', async () => {\n\tawait new Promise<void>(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('waits', async () => {
> 3 | 	await new Promise<void>(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(54): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', {skip: false as boolean}, async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', {skip: false as boolean}, async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(54): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', {skip: false as boolean}, async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', {skip: false as boolean}, async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;

exports[`no-sleep-in-test > invalid(55): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\t(t as TestContext).beforeEach(async () => {\n\t\tawait delay(500);\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	(t as TestContext).beforeEach(async () => {
  5 | 		await delay(500);
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(55): import test from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ntest('waits', async t => {\n\t(t as TestContext).beforeEach(async () => {\n\t\tawait delay(500);\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | test('waits', async t => {
  4 | 	(t as TestContext).beforeEach(async () => {
> 5 | 		await delay(500);
    | 		      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  6 | 	});
  7 | });

`;

exports[`no-sleep-in-test > invalid(56): import {describe, test} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ndescribe.skip('suite', (() => {\n\ttest('ignored', async () => {\n\t\tawait delay(500);\n\t});\n}) as () => void);\ntest('waits', async () => {\n\tawait delay(500);\n}); 1`] = `

   1 | import {describe, test} from 'node:test';
   2 | import {setTimeout as delay} from 'node:timers/promises';
   3 | describe.skip('suite', (() => {
   4 | 	test('ignored', async () => {
   5 | 		await delay(500);
   6 | 	});
   7 | }) as () => void);
   8 | test('waits', async () => {
   9 | 	await delay(500);
  10 | });

`;

exports[`no-sleep-in-test > invalid(56): import {describe, test} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\ndescribe.skip('suite', (() => {\n\ttest('ignored', async () => {\n\t\tawait delay(500);\n\t});\n}) as () => void);\ntest('waits', async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
   1 | import {describe, test} from 'node:test';
   2 | import {setTimeout as delay} from 'node:timers/promises';
   3 | describe.skip('suite', (() => {
   4 | 	test('ignored', async () => {
   5 | 		await delay(500);
   6 | 	});
   7 | }) as () => void);
   8 | test('waits', async () => {
>  9 | 	await delay(500);
     | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  10 | });

`;

exports[`no-sleep-in-test > invalid(6): import * as nodeTest from 'node:test';\nnodeTest.test('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('waits', async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(6): import * as nodeTest from 'node:test';\nnodeTest.test('waits', async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('waits', async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(7): import {beforeEach} from 'node:test';\nbeforeEach(async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async () => {
  3 | 	await new Promise(resolve => setTimeout(resolve, 500));
  4 | });

`;

exports[`no-sleep-in-test > invalid(7): import {beforeEach} from 'node:test';\nbeforeEach(async () => {\n\tawait new Promise(resolve => setTimeout(resolve, 500));\n}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async () => {
> 3 | 	await new Promise(resolve => setTimeout(resolve, 500));
    | 	      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  4 | });

`;

exports[`no-sleep-in-test > invalid(8): import {beforeEach} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nbeforeEach(async () => {\n\tawait delay(500);\n}, {timeout: 1000}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | beforeEach(async () => {
  4 | 	await delay(500);
  5 | }, {timeout: 1000});

`;

exports[`no-sleep-in-test > invalid(8): import {beforeEach} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nbeforeEach(async () => {\n\tawait delay(500);\n}, {timeout: 1000}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | beforeEach(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | }, {timeout: 1000});

`;

exports[`no-sleep-in-test > invalid(9): import {after} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nafter(async () => {\n\tawait delay(500);\n}); 1`] = `

  1 | import {after} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | after(async () => {
  4 | 	await delay(500);
  5 | });

`;

exports[`no-sleep-in-test > invalid(9): import {after} from 'node:test';\nimport {setTimeout as delay} from 'node:timers/promises';\nafter(async () => {\n\tawait delay(500);\n}); 2`] = `

Message:
  1 | import {after} from 'node:test';
  2 | import {setTimeout as delay} from 'node:timers/promises';
  3 | after(async () => {
> 4 | 	await delay(500);
    | 	      ^^^^^^^^^^ Do not sleep in tests with \`setTimeout\`. Await the real signal or use mock timers instead.
  5 | });

`;
